tests/should_fail/data_load_missing_file.nv
module main

// SHOULD FAIL: load from a file that doesn't exist
let x = Data::load@[Int]("this_file_does_not_exist_at_all.json")
